--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ body, html{
 #btn-reply{
   display: flex;
   justify-content: space-between;
-  /* align-items: center */
+  /* / align-items: center / */
 }
 #btn-reply h5{
   margin-top: 0;
@@ -140,7 +140,7 @@ body, html{
   width: fit-content;
   align-self: center;
   padding: 10px 3%;
-  /* transform-origin: 30%; */
+  /* / transform-origin: 30%; / */
   transform: rotate(-30deg)
   
 }
@@ -249,11 +249,11 @@ body, html{
 }
 
 .landing{
-  background-image: url(./img1/landingimage.svg);
+  background-image: url(./imgDashboard/landingimage.svg);
   background-size: cover;
   background-position: center;
   height: 110vh;
-  /* width: 100% */
+  /* / width: 100% / */
 }
 .landing h1{
   color: white;
@@ -365,7 +365,7 @@ body, html{
   flex-wrap: wrap;
 }
 
-/* stroke */
+/* / stroke / */
 .links,
 .links:after,
 .links:before {
@@ -480,11 +480,11 @@ body, html{
   border-radius: 4px;
 }
 #id1{
-  /* height: 100vh; */
+  /* / height: 100vh; / */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* flex-wrap: wrap; */
+  /* / justify-content: center; / */
+  /* / flex-wrap: wrap; / */
   width: 100%;
   padding-top: 60px;
 }
@@ -533,7 +533,7 @@ body, html{
   padding-top:10%;
 }
 #wrapper{
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),url(./img1/charts.svg);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),url(../src/imgDashboard/charts.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover
@@ -568,7 +568,7 @@ body, html{
   height: 100vh;
   
 }
-/* MODAL */
+/* / MODAL / */
 .confirm-btn{
 	box-shadow:inset 0px 1px 0px 0px #9acc85;
 	background-color:#74ad5a;
@@ -639,7 +639,7 @@ body, html{
 .header-profil-seller{
   height: auto;
   width: 100%;
-  background-image: linear-gradient(to bottom, white, transparent), url('./img1/meeting.jpg');
+  background-image: linear-gradient(to bottom, white, transparent), url('./imgDashboard/meeting.jpg');
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -729,7 +729,7 @@ body, html{
 #id4{
   position: relative;
   height: 100vh;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.054), rgba(255,255,255, 0.054)),url('./img1/bgwaves.svg');
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.054), rgba(255,255,255, 0.054)),url('./imgDashboard/bgwaves.svg');
   background-size: cover;
   background-position: center;
 }
@@ -739,7 +739,7 @@ body, html{
   left: 50%;
   transform: translate(-50%, -50%);
 }
-/* CONTACT FORM  */
+/* / CONTACT FORM  / */
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 .input-contact::placeholder, .msg-input::placeholder {
@@ -751,7 +751,7 @@ body, html{
 .input-contact:focus::placeholder, .msg-input::focus::placeholder {
   color: #bbb5af;
 }
-/* on hover placeholder */
+/* / on hover placeholder / */
 
 
 .input-contact:hover::placeholder, .msg-input:hover::placeholder {
@@ -770,7 +770,7 @@ body, html{
 
 .contact-title {
   position: relative;
-  /* margin: 100px 0 25px 0; */
+  /* / margin: 100px 0 25px 0; / */
   font-size: 2.3em;
   text-align: center;
   letter-spacing: 7px;
